Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}

- Remove debugging code from tests
- Fixed some typos and code cleanups

2.001003  2010-02-12 19:01:56 America/Chicago

- Fill out some coercions to allow more complex search criteria (like sort order)
- Promote the helper functions into full methods
- Allow iterative customization by breaking down the save_objects into several discrete steps
- Make sure those steps also include $c

2.001002  2010-02-09 01:01:57 America/Chicago

- Fixed missing requirement for MooseX::Types::Structured
- Fixed MooseX::Aliases usage (we don't any more)
- Object inflation during end was broken out into its own method: each_object_inflate
- Enable offset based paging

2.001001
**************************************************************
** THIS RELEASE GUARANTEES TO BREAK BACKWARDS COMPATIBILITY **
**************************************************************

- Merge create and update into update_or_create
- object is much advanced now:
      + Identifier can be omitted, and data_root in the request is interpreted
- Because of the above one object or several is now possible for update or create
- Create and Update object validation now happens iteratively
- Creates and Updates can be mixed inside a single bulk request
- All modifying actions on the database occur within an all-or-nothing transaction
- Much of the DBIC search parameter munging is properly moved to the RequestArguments 
    Role in the form of a trigger on 'search' to populate 'search_parameters' and 
    'search_attributes' which correspond directly to ->search($parameters, $attributes);
- Error handling is now much more consistent, using Try::Tiny everywhere possible
- Tests are now modernized and use JSON::Any
- Extending is now explicitly done via Moose method modifiers
- The only portion of the stash in use is to allow runtime definition of create/update_allows
- list is now broken down into several steps: