@@ -1,0 +1,3 @@
+*.swp
+*.tar.gz
+Catalyst-Controller-DBIC-API*
